--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="mysql://root:rootpassword@localhost:3306/belajar_reactjs_contact_management"
-DATABASE_URL="mysql://mysql:userpassword123@u0cscokgo0sskkc000kcg088:3306/belajar_reactjs_contact_management"
+DATABASE_URL="mysql://mysql:userpassword@g084ogckokwsc4448sso0s8w:3306/belajar_reactjs_contact_management"
