--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="mysql://root:rootpassword@localhost:3306/belajar_reactjs_contact_management"
-DATABASE_URL="mysql://mysql:userpassword@g084ogckokwsc4448sso0s8w:3306/belajar_reactjs_contact_management"
+DATABASE_URL="mysql://root:rootpassword@localhost:3306/belajar_reactjs_contact_management"
+# DATABASE_URL="mysql://mysql:userpassword@g084ogckokwsc4448sso0s8w:3306/belajar_reactjs_contact_management"
